--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
 
     <application
         android:allowBackup="true"
+        android:name=".models.MemoryMirrorApp"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -18,13 +19,13 @@
         android:theme="@style/Theme.MemoryMirror"
         tools:targetApi="31">
         <activity
-            android:name=".AddMemoryPlaceActivity"
+            android:name=".activities.AddMemoryPlaceActivity"
             android:screenOrientation="portrait"
             android:label="ADD MEMORY PLACE"
             android:theme="@style/CustomNoActionbarTheme"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
