--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+    xmlns:tools="http://schemas.android.com/tools" >
+
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         tools:ignore="ScopedStorage" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.CAMERA"
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission
+        android:name="android.permission.CAMERA"
         tools:ignore="PermissionImpliesUnsupportedChromeOsHardware" />
 
     <application
+        android:name=".util.MemoryMirrorApp"
         android:allowBackup="true"
-        android:name=".models.MemoryMirrorApp"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -17,16 +20,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MemoryMirror"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+
+        <activity
+            android:name=".activities.MemoryPlaceDetailActivity"
+            android:exported="false"
+            android:label="MEMORY DETAIL"
+            android:screenOrientation="portrait"
+            android:theme="@style/CustomNoActionbarTheme" />
         <activity
             android:name=".activities.AddMemoryPlaceActivity"
-            android:screenOrientation="portrait"
+            android:exported="false"
             android:label="ADD MEMORY PLACE"
-            android:theme="@style/CustomNoActionbarTheme"
-            android:exported="false" />
+            android:screenOrientation="portrait"
+            android:theme="@style/CustomNoActionbarTheme" />
         <activity
             android:name=".activities.MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
